--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+Alterado
 # Created by https://www.toptal.com/developers/gitignore/api/csharp
 # Edit at https://www.toptal.com/developers/gitignore?templates=csharp
 
